# optimized_forgottenserver

./: .editorconfig  CMakeLists.txt  build_and_run.sh  build_and_test.sh
cmake/: Findnlohmann_json.cmake
data/JSON/: effects.json
src/: CMakeLists.txt  features.h  game.cpp  game.h  networkmessage.cpp  networkmessage.h  otserv.cpp  protocolgame.cpp
src/effects/: effects.cpp  effects.hpp
src/parsers/: jsonparser.hpp
tests/: CMakeLists.txt  build_and_run.sh  docker-compose.yaml  first_test.cpp  main.cpp  template.cpp
tests/src/: CMakeLists.txt  main.cpp  main.hpp
tests/src/effects/: effects_test.cpp  effects_test.json  items.json
tests/src/test001/: test001.cpp
